K8s-Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone-service
spec:
  type: LoadBalancer
  selector:
    app: netflix-clone
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
